fixed bug with engine and prepped for app store connect submission